# agentperiscope

./: .gitignore  CCVIEW-HANDOFF.md  CCVIEW-SCOPE-001.md  HANDOFF-archive-2026-06-17-1407.md  HANDOFF-archive-2026-06-17-1415.md  HANDOFF-archive-2026-06-17-1447.md  HANDOFF.md  LICENSE  README.md  pyproject.toml
docs/: transcript-schema.md
frontend/: vite.config.ts
frontend/src/: AgentCard.tsx  App.tsx  ProviderBadge.tsx  ProviderFilter.tsx  SessionView.tsx  types.ts  useStore.ts
scripts/: build_frontend.sh
src/agentperiscope/: __main__.py  cli.py  config.py  db.py  hooks.py  model.py  server.py  service.py  watcher.py
src/agentperiscope/providers/: base.py  claude_code.py  codex_cli.py  opencode.py
src/agentperiscope/web/: index.html
src/agentperiscope/web/assets/: index-CgeWCFkS.js  index-Dh5aSsgK.js  index-QldMTEb8.css  index-iNIy2Txa.js
src/ccview/: __main__.py  cli.py  config.py  db.py  hooks.py  model.py  server.py  transcripts.py  watcher.py
src/ccview/web/: index.html
src/ccview/web/assets/: index-BngznFZc.js  index-C2Yt7RJr.css  index-Ckdf5EEF.js  index-D07YnhBp.css  index-D1qLVsv0.css  index-DW0N-6qs.js  index-DyY8kTmZ.css  index-SqirUOmP.css  index-mRQ1Bhux.js  (+1 more)
tests/: test_model.py  test_providers.py  test_transcripts.py
tests/fixtures/: hook-payload-pretooluse.json  parent-session-sample.jsonl  subagent-meta-sample.json  subagent-session-sample.jsonl
tests/fixtures/codex-cli/: rollout-2026-06-01T10-00-00-019e0000-0000-7000-8000-000000000001.jsonl  session_index.jsonl
tests/fixtures/opencode/: create_fixture.py  opencode_fixture.db
