[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ccview"
version = "0.1.0"
description = "Local live viewer for Claude Code subagent activity"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "watchfiles>=1.0",
    "typer>=0.14",
]

[project.scripts]
ccview = "ccview.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ccview"]

[tool.hatch.build.targets.wheel.force-include]
"src/ccview/web" = "ccview/web"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyright]
pythonVersion = "3.12"
include = ["src"]
strict = []

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
